samples/_failures_safe/1761788575_f09383_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9503478b.c: In function ‘main’:
./samples/SAFE/__tmp_9503478b.c:147:13: error: expected expression at end of input
  147 |             case
      |             ^~~~
./samples/SAFE/__tmp_9503478b.c:147:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9503478b.c:147:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9503478b.c:147:13: error: expected declaration or statement at end of input
